--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
           <h2 id="project_tagline"></h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/PlexiLabs/Eclipse-Installers/installers/Eclipse-4.3/eclipse_setup64.exe">Eclipse 64 Bit Setup</a>
-              <a class="tar_download_link" href="https://github.com/PlexiLabs/Eclipse-Installers/installers/Eclipse-4.3/eclipse_setup32.exe">Eclipse 32 Bit Setup</a>
+              <a href="https://github.com/PlexiLabs/Eclipse-Installers/installers/Eclipse-4.3/eclipse_setup64.exe">Eclipse 64 Bit Setup</a>
+              <a href="https://github.com/PlexiLabs/Eclipse-Installers/installers/Eclipse-4.3/eclipse_setup32.exe">Eclipse 32 Bit Setup</a>
             </section>
         </header>
     </div>
